[fix] Добавление изображения в просмотр заказа

--- a/files/order_info.htm
+++ b/files/order_info.htm
@@ -1,173 +1,186 @@
-<div class="order-info">
-{% IF FORM_NOTICE %}<div class="{% IF FORM_NOTICE_IS_GOOD %}success{% ELSE %}warning{% ENDIF %}">{FORM_NOTICE | nl2br}</div>{% ENDIF %}
-  <h3 class="title">Данные заказа</h3> 
+<div class="client">
+  {% IF FORM_NOTICE %}<div class="{% IF FORM_NOTICE_IS_GOOD %}success{% ELSE %}warning{% ENDIF %}">{FORM_NOTICE | nl2br}</div>{% ENDIF %}
+  <h3 class="client__title">Данные заказа</h3>
   <table class="table-box">
     <tbody>
-      <tr>
-        <td class="cell1"><span>Номер:</span></td>
-        <td class="cell2">{ORDER_NUM}</td>
-      </tr>
-      <tr>
-        <td class="cell1"><span>Статус заказа:</span></td>
-        <td class="cell2" title="{ORDER_STATUS_DESC}">{ORDER_STATUS_NAME}</td>
-      </tr>
-      <tr>
-        <td class="cell1"><span>Сумма заказа:</span></td>
-        <td class="cell2">
-          {ORDER_SUM | money}
-          {% IF ORDER_SUM_WITHOUT_DISCONT != ORDER_SUM %}
-            <br /><span style="color:#888888;"><s>{ORDER_SUM_WITHOUT_DISCONT | money("i")}</s> без учета скидки</span>
-          {% ENDIF %}
-        </td>
-      </tr>
-      <tr>
-        <td class="cell1"><span>Статус оплаты:</span></td>
-        <td class="cell2">{% IF ORDER_IS_PAYMENT=1 %}оплачен{% ELSEIF ORDER_IS_PAYMENT=2 %}Оплачен частично{% ELSE %}не оплачен{% ENDIF %}</td>
-      </tr>
-      <tr>
-        <td class="cell1"><span>Контактное лицо:</span></td>
-        <td class="cell2">{ORDER_CONTACT_PERSON}</td>
-      </tr>
-      <tr>
-        <td class="cell1"><span>Телефон для связи:</span></td>
-        <td class="cell2">{ORDER_CONTACT_PHONE}</td>
-      </tr>
-      {% IF ORDER_CONTACT_EMAIL %}
-        <tr>
-          <td class="cell1"><span>Электронная почта:</span></td>
-          <td class="cell2">{ORDER_CONTACT_EMAIL}</td>
-        </tr>
-      {% ENDIF %}
-      {% IF ORDER_DELIVERY_ZIP_CODE %}
-        <tr>
-          <td class="cell1"><span>Почтовый индекс:</span></td>
-          <td class="cell2">{ORDER_DELIVERY_ZIP_CODE}</td>
-        </tr>
-      {% ENDIF %}
-      {% IF ORDER_DELIVERY_COUNTRY %}
-        <tr>
-          <td class="cell1"><span>Страна:</span></td>
-          <td class="cell2">{ORDER_DELIVERY_COUNTRY}</td>
-        </tr>
-      {% ENDIF %}
-      {% IF ORDER_DELIVERY_REGION %}
-        <tr>
-          <td class="cell1"><span>Область:</span></td>
-          <td class="cell2">{ORDER_DELIVERY_REGION}</td>
-        </tr>
-      {% ENDIF %}
-      {% IF ORDER_DELIVERY_CITY %}
-        <tr>
-          <td class="cell1"><span>Город:</span></td>
-          <td class="cell2">{ORDER_DELIVERY_CITY}</td>
-        </tr>
-      {% ENDIF %}
-      {% IF ORDER_DELIVERY_ADDRESS %}
-        <tr>
-          <td class="cell1"><span>Адрес доставки:</span></td>
-          <td class="cell2">{ORDER_DELIVERY_ADDRESS | nl2br}</td>
-        </tr>
-      {% ENDIF %}
-      {% IF ORDER_DELIVERY_CONVENIENT_DATE %}
-        <tr>
-          <td class="cell1"><span>Удобное время доставки:</span></td>
-          <td class="cell2">
-            {ORDER_DELIVERY_CONVENIENT_DATE | date("d.m.Y")} 
-            {% IF ORDER_DELIVERY_CONVENIENT_HOUR_FROM %}
-              c {ORDER_DELIVERY_CONVENIENT_HOUR_FROM}:00
-            {% ENDIF %}
-            {% IF ORDER_DELIVERY_CONVENIENT_HOUR_TO %}
-              до {ORDER_DELIVERY_CONVENIENT_HOUR_TO}:00
-            {% ENDIF %}
-          </td>
-        </tr>
-      {% ENDIF %}
-      {% IF ORDER_DELIVERY_COMMENT %}
-        <tr>
-          <td class="cell1"><span>Комментарий к заказу:</span></td>
-          <td class="cell2">{ORDER_DELIVERY_COMMENT | nl2br}</td>
-        </tr>
-      {% ENDIF %}
-      {% IF ORDER_DELIVERY_TRACKING_NUMBER %}
-        <tr>
-          <td class="cell1"><span>Номер отслеживания:</span></td>
-          <td class="cell2">{ORDER_DELIVERY_TRACKING_NUMBER | nl2br}</td>
-        </tr>
-      {% ENDIF %}
+    <tr>
+      <td class="cell1"><span>Номер:</span></td>
+      <td class="cell2">{ORDER_NUM}</td>
+    </tr>
+    <tr>
+      <td class="cell1"><span>Статус заказа:</span></td>
+      <td class="cell2" title="{ORDER_STATUS_DESC}">{ORDER_STATUS_NAME}</td>
+    </tr>
+    <tr>
+      <td class="cell1"><span>Сумма заказа:</span></td>
+      <td class="cell2">
+        {ORDER_SUM | money}
+        {% IF ORDER_SUM_WITHOUT_DISCONT != ORDER_SUM %}
+        <br /><span style="color:#888888;"><s>{ORDER_SUM_WITHOUT_DISCONT | money("i")}</s> без учета скидки</span>
+        {% ENDIF %}
+      </td>
+    </tr>
+    <tr>
+      <td class="cell1"><span>Статус оплаты:</span></td>
+      <td class="cell2">{% IF ORDER_IS_PAYMENT=1 %}оплачен{% ELSEIF ORDER_IS_PAYMENT=2 %}Оплачен частично{% ELSE %}не оплачен{% ENDIF %}</td>
+    </tr>
+    <tr>
+      <td class="cell1"><span>Контактное лицо:</span></td>
+      <td class="cell2">{ORDER_CONTACT_PERSON}</td>
+    </tr>
+    <tr>
+      <td class="cell1"><span>Телефон для связи:</span></td>
+      <td class="cell2">{ORDER_CONTACT_PHONE}</td>
+    </tr>
+    {% IF ORDER_CONTACT_EMAIL %}
+    <tr>
+      <td class="cell1"><span>Электронная почта:</span></td>
+      <td class="cell2">{ORDER_CONTACT_EMAIL}</td>
+    </tr>
+    {% ENDIF %}
+    {% IF ORDER_DELIVERY_ZIP_CODE %}
+    <tr>
+      <td class="cell1"><span>Почтовый индекс:</span></td>
+      <td class="cell2">{ORDER_DELIVERY_ZIP_CODE}</td>
+    </tr>
+    {% ENDIF %}
+    {% IF ORDER_DELIVERY_COUNTRY %}
+    <tr>
+      <td class="cell1"><span>Страна:</span></td>
+      <td class="cell2">{ORDER_DELIVERY_COUNTRY}</td>
+    </tr>
+    {% ENDIF %}
+    {% IF ORDER_DELIVERY_REGION %}
+    <tr>
+      <td class="cell1"><span>Область:</span></td>
+      <td class="cell2">{ORDER_DELIVERY_REGION}</td>
+    </tr>
+    {% ENDIF %}
+    {% IF ORDER_DELIVERY_CITY %}
+    <tr>
+      <td class="cell1"><span>Город:</span></td>
+      <td class="cell2">{ORDER_DELIVERY_CITY}</td>
+    </tr>
+    {% ENDIF %}
+    {% IF ORDER_DELIVERY_ADDRESS %}
+    <tr>
+      <td class="cell1"><span>Адрес доставки:</span></td>
+      <td class="cell2">{ORDER_DELIVERY_ADDRESS | nl2br}</td>
+    </tr>
+    {% ENDIF %}
+    {% IF ORDER_DELIVERY_CONVENIENT_DATE %}
+    <tr>
+      <td class="cell1"><span>Удобное время доставки:</span></td>
+      <td class="cell2">
+        {ORDER_DELIVERY_CONVENIENT_DATE | date("d.m.Y")}
+        {% IF ORDER_DELIVERY_CONVENIENT_HOUR_FROM %}
+        c {ORDER_DELIVERY_CONVENIENT_HOUR_FROM}:00
+        {% ENDIF %}
+        {% IF ORDER_DELIVERY_CONVENIENT_HOUR_TO %}
+        до {ORDER_DELIVERY_CONVENIENT_HOUR_TO}:00
+        {% ENDIF %}
+      </td>
+    </tr>
+    {% ENDIF %}
+    {% IF ORDER_DELIVERY_COMMENT %}
+    <tr>
+      <td class="cell1"><span>Комментарий к заказу:</span></td>
+      <td class="cell2">{ORDER_DELIVERY_COMMENT | nl2br}</td>
+    </tr>
+    {% ENDIF %}
+    {% IF ORDER_DELIVERY_TRACKING_NUMBER %}
+    <tr>
+      <td class="cell1"><span>Номер отслеживания:</span></td>
+      <td class="cell2">{ORDER_DELIVERY_TRACKING_NUMBER | nl2br}</td>
+    </tr>
+    {% ENDIF %}
+    {% FOR order_extra_fields %}
+    <tr>
+      <td class="cell1"><span>{order_extra_fields.NAME}:</span></td>
+      <td class="cell2">{order_extra_fields.VALUE | nl2br}</td>
+    </tr>
+    {% ENDFOR %}
     </tbody>
-    
+
     <!-- Методы методы оплаты онлайн -->
     <!-- Если заказ не оплачен и выбранный метод оплаты позволяет оплатить его онлайн, покажем форму с оплатой заказа через сайт -->
     {% IF ORDER_PAYMENT_STEP_ENABLE %}
-      <!-- Здесь появляются дополнительные данные, необходимые для заполнения клиентом -->
-      {PAYMENT_FORM_TBODY}
+    <!-- Здесь появляются дополнительные данные, необходимые для заполнения клиентом -->
+    {PAYMENT_FORM_TBODY}
     {% ENDIF %}
     <!-- END методы методы оплаты онлайн -->
   </table>
-  
-{% IFNOT order_lines_empty %}
-  <h3 class="title">Позиции заказа</h3> 
+
+  {% IFNOT order_lines_empty %}
+  <h3 class="client__title">Позиции заказа</h3>
   <div class="scroll">
-    <table class="table-box hbf"> 
-      <thead> 
-        <tr> 
-          <!-- <th>Артикул</th> --> 
-          <td>Название товара</td> 
-          <td>Цена</td>
-          <td>Кол-во</td> 
-          <td>Общая сумма</td> 
-        </tr> 
-      </thead> 
+    <table class="table-box hbf">
+      <thead>
+      <tr>
+        <!-- <th>Артикул</th> -->
+        <td colspan="2">Название товара</td>
+        <td>Цена</td>
+        <td>Кол-во</td>
+        <td>Общая сумма</td>
+      </tr>
+      </thead>
       <tfoot>
-        <tr>
-          <td colspan="2" class="text-right">
-            <span>Итого:</span>
-          </td>
-          <td colspan="2">
-            <span>
-              {ORDER_SUM | money}
-            </span>  
-          </td>
-        </tr>
+      <tr>
+        <td colspan="2" class="text-right">
+          <span>Итого:</span>
+        </td>
+        <td colspan="3">
+          <span>
+            {ORDER_SUM | money}
+          </span>
+        </td>
+      </tr>
       </tfoot>
       <tbody>
-        {% FOR order_lines %}
-          <tr class="border" id="order-item-row-{order_lines.ID}">
-            <!-- <td>{% IF order_lines.ART_NUMBER %}{order_lines.ART_NUMBER}{%ELSE%}&nbsp;{%ENDIF%}</td> -->
-            <td>{% IF order_lines.GOODS_URL %}<a href="{order_lines.GOODS_URL}">{order_lines.NAME}</a>{% ELSE %}{order_lines.NAME}{% ENDIF %}</td> 
-            <td class="a-left" width="100"><span class="price-excl-tax"><span class="cart-price"><span>
-              <!-- Товарная позиция либо доставка -->
-              {% IF order_lines.TYPE_ID=1 || order_lines.TYPE_ID=2 || order_lines.TYPE_ID=3 && order_lines.MEASURE_NAME!=% %}
-                {order_lines.LINE_PRICE | money}
-              <!-- Скидка -->
-              {% ELSEIF order_lines.TYPE_ID = 3%}
-                <span class="num">{order_lines.LINE_PRICE_NUMBER_FORMAT}</span> {order_lines.MEASURE_NAME}
-              {%ENDIF%}
-              </span></span></span>
-            </td> 
-            <td class="a-center" width="50">
-              <!-- Товарная позиция -->
-              {% IF order_lines.TYPE_ID=1 %}
-                {order_lines.QUANTITY} <span title="{order_lines.MEASURE_TITLE}">{order_lines.MEASURE_NAME}</span>
-              <!-- Доставка -->
-              {% ELSEIF order_lines.TYPE_ID = 2%}
-                1 шт
-              <!-- Скидка -->
-              {% ELSEIF order_lines.TYPE_ID = 3%}
-                <span title="{order_lines.MEASURE_TITLE}">{order_lines.MEASURE_NAME}</span>
-              {%ENDIF%}
-            </td> 
-            <td class="a-left" width="100"> 
-              <span class="price-excl-tax"> 
-              <span class="cart-price"><span>{order_lines.LINE_SUM | money}</span></span></span> 
-            </td> 
-          </tr> 
-        {% ENDFOR %}
+      {% FOR order_lines %}
+      <tr class="border" id="order-item-row-{order_lines.ID}">
+        <td>
+          {% IF order_lines.TYPE_ID=1 %}
+          <a href="{order_lines.GOODS_URL}"><img src="{% IFNOT order_lines.GOODS_IMAGE_EMPTY %}{order_lines.GOODS_IMAGE_MEDIUM}{% ELSE %}{ASSETS_IMAGES_PATH}no-photo-medium.png?design=flowers{% ENDIF %}" style="max-width:60px;max-height:60px;" title="{order_lines.GOODS_IMAGE_NAME}" alt="{order_lines.GOODS_IMAGE_NAME}"></a>
+          {% ELSE %}
+          {% IF order_lines.ART_NUMBER %}{order_lines.ART_NUMBER}{%ELSE%}&nbsp;{%ENDIF%}
+          {% ENDIF %}
+        </td>
+        <td>{% IF order_lines.GOODS_URL %}<a href="{order_lines.GOODS_URL}">{order_lines.NAME}</a>{% ELSE %}{order_lines.NAME}{% ENDIF %}</td>
+        <td class="a-left" width="100">
+          <span class="price-excl-tax"><span class="cart-price"><span>
+          <!-- Товарная позиция либо доставка -->
+          {% IF order_lines.TYPE_ID=1 || order_lines.TYPE_ID=2 || order_lines.TYPE_ID=3 && order_lines.MEASURE_NAME!=% %}
+            {order_lines.LINE_PRICE | money}
+          <!-- Скидка -->
+          {% ELSEIF order_lines.TYPE_ID = 3%}
+            <span class="num">{order_lines.LINE_PRICE_NUMBER_FORMAT}</span> {order_lines.MEASURE_NAME}
+          {%ENDIF%}
+          </span></span></span>
+        </td>
+        <td class="a-center" width="50">
+          <!-- Товарная позиция -->
+          {% IF order_lines.TYPE_ID=1 %}
+            {order_lines.QUANTITY} <span title="{order_lines.MEASURE_TITLE}">{order_lines.MEASURE_NAME}</span>
+          <!-- Доставка -->
+          {% ELSEIF order_lines.TYPE_ID = 2%}
+            1 шт
+          <!-- Скидка -->
+          {% ELSEIF order_lines.TYPE_ID = 3%}
+          <span title="{order_lines.MEASURE_TITLE}">{order_lines.MEASURE_NAME}</span>
+          {%ENDIF%}
+        </td>
+        <td class="a-left" width="100">
+          <span class="price-excl-tax">
+          <span class="cart-price"><span>{order_lines.LINE_SUM | money}</span></span></span>
+        </td>
+      </tr>
+      {% ENDFOR %}
       </tbody>
     </table>
   </div>
   <div class="buttons">
     <a href="{INDEX_PAGE_URL}" class="button">Перейти на главную</a>
   </div>
-{% ENDIF %}
+  {% ENDIF %}
 </div>
